added platform to bundle lock

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,4 @@
 <h1>List</h1>
 <%= link_to 'Add Bookmark', new_list_bookmark_path(@list) %>
+<%= link_to 'Destroy Bookmark', bookmark_path(@list) %>
 <%= link_to 'All Lists', lists_path %>
