--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,9 @@
+.card {
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  text-shadow: 0 0 0 black;
+}
 .card-category {
   background-size: cover;
   background-position: center;
