--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New List</h1>
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name %>
-  <%= f.submit class: 'btn btn-primary mt-2' %>
-<% end %>
+<div class="container">
+  <div class="text-center pt-3">
+    <h1>Create a new list</h1>
+  </div>
+  <%= simple_form_for @list do |f| %>
+    <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
+    <%= f.submit class: 'btn btn-danger mt-2' %>
+  <% end %>
+</div>
