--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,7 +1,11 @@
-<h1>Add a bookmark</h1>
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.input :comment %>
-  <%= f.association :movie %>
-  <%= f.submit class: 'btn btn-primary mt-2' %>
-<% end %>
-<%= link_to 'All Lists', lists_path %>
+<div class="container">
+  <div class="text-center mt-3">
+    <h1>Add a bookmark</h1>
+  </div>
+  <%= simple_form_for [@list, @bookmark] do |f| %>
+    <%= f.input :comment %>
+    <%= f.association :movie %>
+    <%= f.submit class: 'btn btn-danger mt-2' %>
+    <%= link_to 'All Lists', lists_path, class: 'btn btn-danger mt-2' %>
+  <% end %>
+</div>
