--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #ff0a54;;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
