--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$gray: #444444;
+$off-white: #EDF2F4;
+$light-red: #ff0a54;
+$dark-red: #D90429;
+$dark-gray: #161a1d;
